fix: off center styling issue

--- a/style.scss
+++ b/style.scss
@@ -360,8 +360,6 @@
     }
 
     #solfeggio-dropdown {
-      width: 5rem;
-      text-align: center;
       font-family: "Montserrat", sans-serif;
       font-size: 1rem;
       color: var(--foreground-color);
